- Documentation - Updated sec1.1 - Instructed to use bugs.unrealircd.org to report problems with docs
- Documentation - Updated misc hyperlinks - doc/unreal32docs.html
- Documentation - Updated sec3.31 - Added better description to the format we present set:: settings 
- Documentation - Updated sec3.31 - Added more details to set directives
- Documentation - Updated sec3.25 - Added option vhost::swhois to section 3.25 Vhost block
- Documentation - Replaced text vair {} with <> to prevent confusion.
- Documentation - Documented that lusers now supports remote servers
- Documentation - Corrected vhost::from example as reported by joolz (#0000329 )
- Documentation - Corrected set::scan:messages, currently listed as set::messages - as reported by joolz (#0000329) 
- Documentation - Added channel mode t & description as reported by stfcs (#0000315) 
- example.conf - Corrected incorrect set::services-services statment in alias block - reported by mcskaf (#0000401)
- Documentation - Corrected Spelling mistake in HTM mode - Reported by CoNfOuNd (#0000387)
- Documentation - Added coadmin to table of oper types - Reported by FrostByghte (#0000359)
- Documentation - Corrected several HTML formating problems
- Commited first 20% of conf3, if anyone runs devel, DO NOT, it is BROKEN and will most likely NOT FUNCTION
  and it WILL burn, DIE, and WILL NOT WORK
- Fixed conf3 bug with _conf_except tkl
- /kline and /zline now use TKL
- Removed src/win32/unrealinstssl.iss and merged it into unrealinst.iss, add #define
  USE_SSL to the file to build an SSL package
- Added additional NT Service options to the win32 installer
- Made CLIENT_FLOOD more customizable
- Fixed some conf3 compile errors and block-modded _*_tld
- Fixed stats bug reported by RaYmAn
- Added a patch by McSkaf that will hopefully fix the win32 resolver crashes
- Converted badword to conf3
- Fixed some win32 problems with conf3
- Fixed a problem in config testing with conf3